# Weather_station

./: readme.md
software/: CMakeLists.txt  readme.md  upload_soft.sh
software/build.backup/: CMakeCache.txt  Makefile  cmake_install.cmake  update_bin.sh  weather_station.dis  weather_station.elf.map  weather_station.hex  weather_station.uf2
software/build.backup/.cmake/api/v1/reply/: cache-v2-6e5f8b776ced78a3f9d0.json  cmakeFiles-v1-18789a2e8a9a7cdfea06.json  codemodel-v2-56d611f637515421af09.json  directory-pico-sdk-Release-ef0ae9a1b289b7a5631e.json  directory-pico-sdk.docs-Release-466e438973990224797b.json  directory-pico-sdk.src-Release-4a5ec2be3c511454c010.json  directory-pico-sdk.src.common-Release-306eaf3a321ca0f86a73.json  directory-pico-sdk.src.common.boot_picoboot-Release-cbd5ad3a44844f1c0e3e.json  directory-pico-sdk.src.common.boot_uf2-Release-e1d75a69cc9088ffea27.json  directory-pico-sdk.src.common.pico_base-Release-cb0fac2bcf08c9b3546e.json  directory-pico-sdk.src.common.pico_binary_info-Release-7506adf87657ac61a3f9.json  directory-pico-sdk.src.common.pico_bit_ops-Release-a5c49b60c5a7611c0a0f.json  directory-pico-sdk.src.common.pico_divider-Release-46718f6dd7960f2f4f80.json  directory-pico-sdk.src.common.pico_stdlib-Release-2c2c9407f510a6d94fbc.json  directory-pico-sdk.src.common.pico_sync-Release-7c8bcce89dc3f24886e0.json  directory-pico-sdk.src.common.pico_time-Release-2c5319324c18454c80bd.json  directory-pico-sdk.src.common.pico_usb_reset_interface-Release-4079200addc8e336de36.json  directory-pico-sdk.src.common.pico_util-Release-b27b99383189753da60e.json  directory-pico-sdk.src.rp2040-Release-fca8e52871e3a0088a03.json  directory-pico-sdk.src.rp2040.hardware_regs-Release-de722b95421ca160aec9.json  directory-pico-sdk.src.rp2040.hardware_structs-Release-7acf28ade3150fce833f.json  directory-pico-sdk.src.rp2_common-Release-559e580c4f55889c158d.json  directory-pico-sdk.src.rp2_common.boot_stage2-Release-0d922227833cb7d95001.json  directory-pico-sdk.src.rp2_common.cmsis-Release-0d0d1f3138f420e0a84d.json  directory-pico-sdk.src.rp2_common.hardware_adc-Release-c833c82e00d58a1a99bf.json  directory-pico-sdk.src.rp2_common.hardware_base-Release-9f192726a3f9d39acf85.json  directory-pico-sdk.src.rp2_common.hardware_claim-Release-cc2deb530ef031ec5c1b.json  directory-pico-sdk.src.rp2_common.hardware_clocks-Release-d85eca63e0a72ddab6c8.json  directory-pico-sdk.src.rp2_common.hardware_divider-Release-209070938d501a5c7f9f.json  directory-pico-sdk.src.rp2_common.hardware_dma-Release-1404c4cb808166579b7d.json  directory-pico-sdk.src.rp2_common.hardware_exception-Release-8dd4f64a0cb9827d7008.json  directory-pico-sdk.src.rp2_common.hardware_flash-Release-c822cb7a3fcb928280d5.json  directory-pico-sdk.src.rp2_common.hardware_gpio-Release-0435cac4a649046e76ff.json  directory-pico-sdk.src.rp2_common.hardware_i2c-Release-6ecd76e77b4c30776340.json  directory-pico-sdk.src.rp2_common.hardware_interp-Release-e6b1f1298027bd513d8e.json  directory-pico-sdk.src.rp2_common.hardware_irq-Release-a47b79d825cb8104b2c3.json  directory-pico-sdk.src.rp2_common.hardware_pio-Release-b93633882b1c04f63c43.json  directory-pico-sdk.src.rp2_common.hardware_pll-Release-b6fb4aecd638e8c43b8e.json  directory-pico-sdk.src.rp2_common.hardware_pwm-Release-a40eed01ab685261c636.json  directory-pico-sdk.src.rp2_common.hardware_resets-Release-4cf6be28fdae3ced03b3.json  (+67 more)
software/build.backup/elf2uf2/: CMakeCache.txt  Makefile  cmake_install.cmake
software/build.backup/elf2uf2/boot_uf2_headers/: Makefile  cmake_install.cmake
software/build.backup/pico-sdk/: Makefile  cmake_install.cmake
software/build.backup/pico-sdk/docs/: Makefile  cmake_install.cmake
software/build.backup/pico-sdk/src/: Makefile  cmake_install.cmake
software/build.backup/pico-sdk/src/common/: Makefile  cmake_install.cmake
software/build.backup/pico-sdk/src/common/boot_picoboot/: Makefile  cmake_install.cmake
software/build.backup/pico-sdk/src/common/boot_uf2/: Makefile  (+1 more)
software/build.backup/pico-sdk/src/rp2040/: Makefile  cmake_install.cmake
software/build.backup/pico-sdk/src/rp2_common/: Makefile  cmake_install.cmake
software/build.backup/pico-sdk/tools/: Makefile
software/build.backup/pioasm/: CMakeCache.txt  Makefile  cmake_install.cmake
software/build.backup/src/: Makefile  cmake_install.cmake
software/build.backup/src/RN4870/: Makefile  cmake_install.cmake
software/build.backup/src/bme280/: Makefile  cmake_install.cmake
software/build.backup/src/font/: Makefile  cmake_install.cmake
software/build.backup/src/lcd/: Makefile  cmake_install.cmake
software/build.backup/src/led_rgb/: Makefile  cmake_install.cmake
software/build.backup/src/station/: Makefile  cmake_install.cmake
software/build.backup/src/touchscreen/: Makefile  cmake_install.cmake
software/build.backup/src/util/: Makefile  cmake_install.cmake
software/build.backup/src/veml7700/: Makefile  cmake_install.cmake
software/src/: CMakeLists.txt  board.h  main.c
software/src/RN4870/: CMakeLists.txt  RN4870.c  RN4870.h
software/src/bme280/: CMakeLists.txt  bme280.c  bme280.h
software/src/buffer_loop/: CMakeLists.txt  buffer_loop.c  buffer_loop.h
software/src/callback/: CMakeLists.txt  callback.h
software/src/display/: CMakeLists.txt  display.c  display.h
software/src/drawing_mode/: CMakeLists.txt  drawing_mode.c  drawing_mode.h
software/src/font/: CMakeLists.txt  font.c  font.h
software/src/i2c_non_blocking/: CMakeLists.txt  i2c_non_blocking.c  i2c_non_blocking.h
software/src/lcd/: CMakeLists.txt  lcd.c  lcd.h
software/src/led_rgb/: CMakeLists.txt  led_rgb.c  led_rgb.h
software/src/station/: CMakeLists.txt  station.c  station.h
software/src/systick/: CMakeLists.txt  systick.c  systick.h
software/src/touchscreen/: CMakeLists.txt  touchscreen.c  touchscreen.h
software/src/util/: CMakeLists.txt  util.c  util.h
software/src/veml7700/: CMakeLists.txt  veml7700.c  veml7700.h
software/src/weather_mode/: CMakeLists.txt  weather_mode.c  weather_mode.h
software/src/wellcome_mode/: CMakeLists.txt  wellcome_mode.c  wellcome_mode.h
(+117 files in other folders)
